# Studi_Legacy

Betriebssysteme/Blatt 1/: Dokumentation.txt
Betriebssysteme/Blatt 6/Web_Request/: CMakeLists.txt  Makefile  better_bot.cpp  simple_bot  simple_bot.c
Betriebssysteme/Blatt 6_2/Projekt/: CMakeLists.txt  Makefile  run_bot.bash  threaded_bot  threaded_bot.c
Betriebssysteme/Blatt 6_2/Projekt/download/: -127822080_5_ubuntu.com.html  0_10_www.amazon.de.html  0_1_duckduckgo.com.html  0_1_twitter.com.html  0_1_www.amazon.de.html  0_1_www.bing.com.html  0_1_www.facebook.com.html  0_1_www.faz.net.html  0_1_www.focus.de.html  0_1_www.golem.de.html  0_1_www.google.de.html  0_1_www.heise.de.html  0_1_www.instagram.com.html  0_1_www.netflix.com.html  0_1_www.spiegel.de.html  0_1_www.welt.de.html  0_1_www.zdf.de.html  0_2_www.bing.com.html  0_2_www.facebook.com.html  0_2_www.google.de.html  0_2_www.welt.de.html  0_3_www.focus.de.html  0_3_www.heise.de.html  0_3_www.wetter.com.html  0_4_www.bing.com.html  0_4_www.facebook.com.html  0_4_www.spiegel.de.html  0_4_www.telekom.de.html  0_5_www.instagram.com.html  0_6_twitter.com.html  0_6_www.google.de.html  0_7_www.computerbase.de.html  0_7_www.ibm.com.html  0_7_www.instagram.com.html  0_7_www.netflix.com.html  0_8_github.com.html  0_8_www.netflix.com.html  0_9_twitter.com.html  0_9_www.ebay-kleinanzeigen.de.html  0_9_www.faz.net.html  (+268 more)
Betriebssysteme/Blatt 6_2/Projekt/include/: prosumer.h
Betriebssysteme/Blatt 6_2/Projekt/lib/: prosumer.c
Methoden/: Bibliographie.docx  Scheisse.docx  Scheisse2.docx  ~$bliographie.docx
(+1348 files in other folders)
